more stuffs change

--- a/informationcenter.html
+++ b/informationcenter.html
@@ -16,13 +16,13 @@
 		<nav class="pageNav">
 			<h3 class="scrn-rdr">Site Navigation</h3>
 			<ul><!--
-				--><li><a href="#">Home</a></li><!--
-				--><li><a href="#">Information Center</a></li><!--
-				--><li><a href="#">Newsroom</a></li><!--
-				--><li><a href="#">Contact Us</a></li><!--
+				--><li><a href="index.html">Home</a></li><!--
+				--><li><a href="informationcenter.html">Information Center</a></li><!--
+				--><li><a href="newsroom.html">Newsroom</a></li><!--
+				--><li><a href="contactus.html">Contact Us</a></li><!--
 			--></ul>
 		</nav>
-	
+			
 		<header class="pageBannerFeature contentHeader">
 			<h1>Information Center</h1>
 
