--- a/newsroom.html
+++ b/newsroom.html
@@ -16,51 +16,49 @@
 		<nav class="pageNav">
 			<h3 class="scrn-rdr">Site Navigation</h3>
 			<ul><!--
-				--><li><a href="#">Home</a></li><!--
-				--><li><a href="#">Information Center</a></li><!--
-				--><li><a href="#">Newsroom</a></li><!--
-				--><li><a href="#">Contact Us</a></li><!--
+				--><li><a href="index.html">Home</a></li><!--
+				--><li><a href="informationcenter.html">Information Center</a></li><!--
+				--><li><a href="newsroom.html">Newsroom</a></li><!--
+				--><li><a href="contactus.html">Contact Us</a></li><!--
 			--></ul>
 		</nav>
 
 		<aside class="pageBannerFeature">
-			<h3 class="scrn-rdr">Featured Link</h3>
-			<p class="blurb">Dedicated to bringing people together to discuss issues that are important in their communities.</p>
-			<a href="#" class="readMoreButton">Read More</a>
 		</aside>
 	
-		<section class="sectionBlurb">
-			<h2>Our Community</h2>
+		<header class="contentHeader">
+			<h1>Newsroom</h1>
+		</header>
 
-			<p>Chermont is a large city located in the Northesat United States. It has a population of just under 2 million, its size being comparable to cities such as Houston. the city, positioned at a key point on a major river, is a hub for trade in the region. Chermont international Airport handles flights from all over the world, and also offers on-site convention space.</p>
-		</section>
+		<article class="articleBlurb">
 
-		<aside class="articleLinks newsrole halfer">
-			<h2>Latest Headlines</h2>
-
-			<div class="articleLink">
-				<h4><a href="#">Summer jobs available in Chermont Parks</a></h4>
-				<p>Students looking to apply may contact the Recreation Department through May 24th.</p>
-			</div>	
-			
-			<div class="articleLink">
-				<h4><a href="#">New superstore planned in Rainbow Avenue</a></h4>
-				<p>From appliances to toys to fishing equipment, the Rainbow Ave. location will have it all.</p>
-			</div>
-
-			
-			<div class="articleLink">
-				<h4><a href="#">Computer Fair at Convention Center</a></h4>
-				<p>Learn to design and code websites in this intensive three-month course!</p>
-			</div>
-
-		</aside>
-
-		<section class="sectionBlurb halfer">
 			<h2>Youngsters Excel at the Gracer County Fair</h2>
 
 			<p>At the County Fair held last Tuesday, a number of young people from across the county participated and walked away with prizes. Over the past year, the youngsters showing a keen interest in honing their talents sewed dresses, planned parties, raised unusual animals as pets, crafted artworks, held painting exhibitions etc. to impress the judges at the Fair with their unique skills.</p>
-		</section>
+
+			<p>Donna, 16, portrayed Abraham Lincoln in copper. At her metalcraft class, she was told that she could use any person she wanted and portray him in copper. Donna used the 16th President of the United States. She saw a picture of him in her history book and decided to use the same one. Using tracing paper and a marker to transfer the image on to the plate, she then used wooden tools to indent the image into the copper. To do the hair, she used a pencil tip. It took her around 12 days to complete the project. She won the best crafter award in her class for it. Donna brought the image to the fair and won a blue ribbon for it.</p>
+
+			<blockquote>"It feels wonderful to receive a blue ribbon for my work. I'm going to make more like this!"<cite> - Donna</cite></blockquote>
+
+			<p>Reece Wanders brought a painted pony to the fair. The 14 year old won a blue ribbon and Best of show for the painted carousel horse that he brought to the fair. "People often throw away these treasures when their children no longer use them because they don't realize their worth" explained Reece. "I love to paint them and restore them to their old glory."</p>
+
+			<p>10-year-old Christina, a member of the Young Earthian Club, baked a cake fit for a princess. With an interesting theme like Cinderella going to the ball, the rounded cake coach was indeed a sight to see. It sat on a quarter sheet cake iced in white frosting. It had red icing wheels and strings of small pearls around the side openings. Two white horses and one black horse, each carrying a candle in its saddle, drew the coach. The words "Happy birthday" were inscribed in blue icing. Christina won Best of Class and Showcase.</p>
+					
+			<p>Jupiter Evans, a 19-year-old student, also belonging to the Young Earthian Club, brought his sugar glider much to the delight of everybody around. The sugar glider, affectionately often referred to simply as the "glider," is now a popular exotic pet in the United States because it makes a great companion and enjoys interacting with humans. It is smaller than a gerbil, larger than a mouse, as adorable as a Teddy Bear hamster, and as fun to watch at play as a chipmunk or squirrel. Jupe plans to raise as many gliders as possible, with the help and support of his parents, who he says are a great source of inspiration.</p>
+
+			<div class="articleFeatureList">
+
+				<h3>Full list of winners:</h3>
+
+				<dl>
+					<dt>Donna Franklin,</dt> <dd>Blue Ribbon</dd>
+					<dt>Reece Wanders,</dt> <dd>Best of Show</dd>
+					<dt>Christina Rosenkranz,</dt> <dd>Best of Class</dd>
+					<dt>Jupiter Evans,</dt> <dd>Honorable Mention</dd>
+				</dl>
+			</div>
+		</article>
+			
 
 	</main>
 
