--- a/newsroom.html
+++ b/newsroom.html
@@ -34,6 +34,8 @@
 
 			<h2>Youngsters Excel at the Gracer County Fair</h2>
 
+			<img src="./images/blueribbon.jpg" alt="Blue Ribbon" class="">
+
 			<p>At the County Fair held last Tuesday, a number of young people from across the county participated and walked away with prizes. Over the past year, the youngsters showing a keen interest in honing their talents sewed dresses, planned parties, raised unusual animals as pets, crafted artworks, held painting exhibitions etc. to impress the judges at the Fair with their unique skills.</p>
 
 			<p>Donna, 16, portrayed Abraham Lincoln in copper. At her metalcraft class, she was told that she could use any person she wanted and portray him in copper. Donna used the 16th President of the United States. She saw a picture of him in her history book and decided to use the same one. Using tracing paper and a marker to transfer the image on to the plate, she then used wooden tools to indent the image into the copper. To do the hair, she used a pencil tip. It took her around 12 days to complete the project. She won the best crafter award in her class for it. Donna brought the image to the fair and won a blue ribbon for it.</p>
