add meta charset, realized I missed it again

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+	<meta charset="utf-8">
 	<title>Citizens Information Center - </title>
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<link rel="shortcut icon" href="favicon.ico">
@@ -24,7 +26,7 @@
 				--><li><a href="contactus.html">Contact Us</a></li><!--
 			--></ul>
 		</nav>
-		
+
 		<aside class="pageBannerFeature">
 			<h3 class="scrn-rdr">Featured Link</h3>
 			<p class="blurb">Dedicated to bringing people together to discuss issues that are important in their communities.</p>
