--- a/informationcenter.html
+++ b/informationcenter.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Citizens Information Center - The Information Center Page</title>
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<link rel="shortcut icon" href="favicon.ico">
@@ -22,7 +23,7 @@
 				--><li><a href="contactus.html">Contact Us</a></li><!--
 			--></ul>
 		</nav>
-			
+
 		<header class="pageBannerFeature contentHeader">
 			<h1>Information Center</h1>
 
