--- a/newsroom.html
+++ b/newsroom.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Citizens Information Center - Newsroom</title>
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<link rel="shortcut icon" href="favicon.ico">
